--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.2.0",
     "socket.io": "^4.6.1"
   },
