--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start-all": "concurrently \"cd api-gateway && npm start\" \"cd auth-service && npm start\" \"cd chat-service && npm start\" \"cd admin-service && npm start\""
   },
   "dependencies": {
-    "concurrently": "^7.0.0"
+    "concurrently": "^7.0.0",
+    "cors": "^2.8.5"
   }
 }
